add new book through dialogue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Add New Book</h1>
             <label>Title:<input id="title" class="input-field" name="title" type="text"></label>
             <label>Author:<input id="author" class="input-field" name="autor" type="text"></label>
-            <label>Pages: <input id="page-count" class="input-field" name="pages" type="number"></label>
+            <label>Pages: <input id="pages" class="input-field" name="pages" type="text"></label>
             <label>Have you read this book? <input id="read-yn" class="read-yn" form="readyn" name="read" type="checkbox"></label>
         </form>
         <button class="dialog-submit" name="submit" type="submit">Add to library</button>
