show library as cards

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <header>
         <hl>Library Books</h1>
+        <button class="add-book-dialog-button">Add New Book</button>
     </header>
 
-    <button class="add-book-dialog-button">Add New Book</button>
+    <div class="library"></div>
 
     <dialog class="modal">
         <form action="/script.js" method="dialog" class="book-input">
